Fixed link dialog z-index issue in Customizer

--- a/css/black-studio-tinymce-widget.css
+++ b/css/black-studio-tinymce-widget.css
@@ -114,6 +114,17 @@ div[id*="black-studio-tinymce"] .mce-wp-fullscreen {
 	z-index: 1000100 !important;
 }
 
+/* Fix z-index for link dialog windows (used on recent WP versions) */
+
+.wp-customizer #wp-link-backdrop {
+	z-index: 500010;
+}
+
+.wp-customizer #wp-link-wrap {
+	z-index: 500020;
+}
+
+
 
 /* Change mouse cursor when waiting */
 
